syntax = "proto3";

option csharp_namespace = "PharmacyAPI.Protos";

message MedicineOrderingRequest{
	string medicineName = 1;
	double medicineDosage = 2;
	int64 quantity = 3;
	string apiKey =  4;
	bool test = 5;
}
message MedicineOrderingResponse{
	string response = 1;
}